--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "gradio (>=5.16.0,<6.0.0)",
     "langchain-deepseek (>=0.1.2,<0.2.0)",
     "loguru (>=0.7.3,<0.8.0)",
+    "datasets (>=3.2.0,<4.0.0)",
 ]
 
 
@@ -29,6 +30,7 @@ build-backend = "poetry.core.masonry.api"
 ruff = "^0.9.6"
 pre-commit = "^4.1.0"
 python-semantic-release = "^9.19.1"
+ipykernel = "^6.29.5"
 
 [tool.semantic_release]
 version_source = "pep621"
