--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,20 +56,22 @@ jobs:
           LATEST_VERSION=${LATEST_TAG#v}
 
           # Run semantic release and capture its output
-          VERSION=$(SEMANTIC_RELEASE_LAST_VERSION=$LATEST_VERSION poetry run semantic-release version --prerelease --prerelease-token alpha)
-          if [ $? -eq 0 ]; then
-            # Extract version number from semantic-release output
-            NEW_VERSION=$(echo "$VERSION" | grep "New version: " | cut -d' ' -f3)
-            if [ -n "$NEW_VERSION" ] && [ "$NEW_VERSION" != "$LATEST_VERSION" ]; then
+          VERSION_OUTPUT=$(SEMANTIC_RELEASE_LAST_VERSION=$LATEST_VERSION poetry run semantic-release version --prerelease --prerelease-token alpha)
+          echo "Version command output: $VERSION_OUTPUT"
+
+          if [[ $VERSION_OUTPUT =~ "The next version is: "([0-9]+\.[0-9]+\.[0-9]+[-a-z0-9.]*) ]]; then
+            NEW_VERSION="${BASH_REMATCH[1]}"
+            echo "Detected new version: $NEW_VERSION"
+            if [ "$NEW_VERSION" != "$LATEST_VERSION" ]; then
               echo "new_version=v${NEW_VERSION}" >> $GITHUB_OUTPUT
               # Now publish with the same version awareness
               SEMANTIC_RELEASE_LAST_VERSION=$LATEST_VERSION poetry run semantic-release publish --prerelease --prerelease-token alpha
             else
-              echo "No new version detected or version already exists"
+              echo "Version $NEW_VERSION already exists"
               exit 0
             fi
           else
-            echo "No new version to be released"
+            echo "No new version detected in output"
             exit 0
           fi
 
