--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,8 @@ packages = ["ymir"]
 version_source = "pep621"
 branch = "master"
 upload_to_pypi = false
+changelog = "CHANGELOG.md"
+build_command = "pip install build && python -m build"
+dist_path = "dist/"
+major_on_zero = false
+tag_format = "v{version}"
