chore: Configure alpha prerelease for semantic-release
- Added prerelease configuration in pyproject.toml
- Modified release workflow to trigger on master branch push
- Enabled alpha prerelease token for version management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,5 @@ build_command = "pip install build && python -m build"
 dist_path = "dist/"
 major_on_zero = false
 tag_format = "v{version}"
+prerelease = true
+prerelease_token = "alpha"
