--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-multipart>=0.0.9,<0.1.0",
     "loguru>=0.7.3,<0.8.0",
     "datasets>=3.2.0,<4.0.0",
+    "pypdf[full]>=5.3.1",
 ]
 
 [dependency-groups]
