--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,8 +56,17 @@ jobs:
           # Add v prefix for GitHub release
           echo "new_version=v${NEW_VERSION}" >> $GITHUB_OUTPUT
 
-          # Generate separate release notes file for GitHub Release
-          semantic-release changelog --unreleased-only > RELEASE_NOTES.md
+          # Get the commits since the last tag to generate release notes
+          PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          if [ -z "$PREV_TAG" ]; then
+              echo "# Release v${NEW_VERSION}" > RELEASE_NOTES.md
+              echo "Initial release" >> RELEASE_NOTES.md
+          else
+              echo "# Release v${NEW_VERSION}" > RELEASE_NOTES.md
+              echo "Changes since ${PREV_TAG}:" >> RELEASE_NOTES.md
+              echo "" >> RELEASE_NOTES.md
+              git log --pretty=format:"* %s" ${PREV_TAG}..HEAD >> RELEASE_NOTES.md
+          fi
 
           # Publish the release
           semantic-release publish
