--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,14 @@ requires-python = ">=3.11,<3.14"
 readme = "README.md"
 license = { text = "Apache 2" }
 dependencies = [
-    "fastapi>=0.110.0",
-    "jinja2>=3.1.3",
-    "uvicorn>=0.29.0",
-    "python-multipart>=0.0.9",
-    "loguru>=0.7.3",
-    "pydantic>=2.0.0",
-    "ollama>=0.4.0",
-    "pyyaml>=6.0.0",
+    "fastapi>=0.110.0,<1.0.0",
+    "jinja2>=3.1.3,<4.0.0",
+    "uvicorn>=0.29.0,<1.0.0",
+    "python-multipart>=0.0.9,<1.0.0",
+    "loguru>=0.7.3,<1.0.0",
+    "pydantic>=2.0.0,<3.0.0",
+    "ollama>=0.4.0,<1.0.0",
+    "pyyaml>=6.0.0,<7.0.0",
 ]
 
 [dependency-groups]
