--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pydantic>=2.0.0,<3.0.0",
     "ollama>=0.4.0,<1.0.0",
     "pyyaml>=6.0.0,<7.0.0",
+    "websockets>=15.0.1",
 ]
 
 [dependency-groups]
