--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Runtime data (SQLite database, exports, trajectories)
+ymir/data/runtime/
+
 # Logs
 *.log
 logs/
