--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "ollama>=0.4.0,<1.0.0",
     "pyyaml>=6.0.0,<7.0.0",
     "websockets>=15.0.1",
+    "aiosqlite>=0.19.0,<1.0.0",
 ]
 
 [dependency-groups]
